Can not create timeseries 2dsphere index with a non-system user

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Critical - P2
    • 8.3.0-rc0, 8.2.6
    • Affects Version/s: 8.3.0-rc0, 8.2.4, 8.0.18, 7.0.29
    • Component/s: Index Maintenance
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.2, v8.0, v7.0
    • Storage Execution 2026-02-02, Storage Execution 2026-02-16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Since SERVER-113888 creating a 2dsphere index on a timeseries collection with a non-system user fails with error: "CannotCreateIndex: Index Type 2dsphere_bucket is for internal use only".

       

      The issue seems to be that the create index command will first translate the index type from 2dsphere to 2dsphere_bucket and then later validate that indexes of type 2dsphere_bucket can only be created by a system user. So the validation sees the translated 2dsphere_bucket type rather than then 2dsphere that the user submitted.

       

      A  reproducer is attached.

            Assignee:
            Benjamin Pearce
            Reporter:
            Joan Bruguera Micó
            Votes:
            0 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved: