SERVER-118546 Remove check for system user on create_indexes_command (#47484)

GitOrigin-RevId: 660595d0e5608a9e1ad30f78f89a46ea0d3d5ea9