jstests/core/index/index_on_incorrect_collection.js
@@ -6,29 +6,49 @@
  * ]
  */
 
-import {after, before, describe, it} from "jstests/libs/mochalite.js";
+import {after, afterEach, before, beforeEach, describe, it} from "jstests/libs/mochalite.js";
 
 describe("Nonfatal error when attempting to update an improper timeseries-only index on a non-timeseries collection.", function () {
     const collName = jsTestName();
     before(function () {
         this.coll = db.getCollection(collName);
         this.coll.drop();
+    });
+
+    beforeEach(function () {
         assert.commandWorked(db.createCollection(collName));
+        this.coll = db.getCollection(collName);
     });
 
     it("Prevents updating 2dsphere_bucket indices for top-level measurements", function () {
-        // Authorization rules will normally prevent a non-system user from creating this index.
-        assert.commandWorked(this.coll.createIndex({x: "2dsphere_bucket"}));
-        assert.commandFailed(this.coll.insert({control: {version: 2}, x: HexData(0, "00")}));
+        const indexSpec = {x: "2dsphere_bucket"};
+        // TODO SERVER-118911 index creation should not be possible
+        assert.commandWorked(this.coll.createIndex(indexSpec));
+        const sampleDoc = {control: {version: 2}, x: HexData(0, "00")};
+        assert.commandFailed(this.coll.insert(sampleDoc));
+        // Ensure the index can be dropped, allowing the sampleDoc to be inserted
+        const res = assert.commandWorked(this.coll.dropIndex(indexSpec));
+        assert.commandWorked(this.coll.insert(sampleDoc));
     });
 
     it("Prevents updating 2dsphere_bucket indices for nested measurements", function () {
-        // Authorization rules will normally prevent a non-system user from creating this index.
-        assert.commandWorked(this.coll.createIndex({"data.a.b.c": "2dsphere_bucket"}));
-        assert.commandFailed(this.coll.insert({control: {version: 2}, data: {a: {b: {c: [0, 0]}}}}));
+        const indexSpec = {"data.a.b.c": "2dsphere_bucket"};
+        // TODO SERVER-118911 index creation should not be possible
+        assert.commandWorked(this.coll.createIndex(indexSpec));
+        const sampleDoc = {control: {version: 2}, data: {a: {b: {c: [0, 0]}}}};
+        assert.commandFailed(this.coll.insert(sampleDoc));
+        // Ensure the index can be dropped, allowing the sampleDoc to be inserted
+        const res = assert.commandWorked(this.coll.dropIndex(indexSpec));
+        assert.commandWorked(this.coll.insert(sampleDoc));
     });
 
-    after(function () {
+    it("Cannot build a 2dsphere_bucket index on a populated collection", function () {
+        assert.commandWorked(this.coll.insert({abc: "xyz"}));
+        assert.commandFailed(this.coll.createIndex({x: "2dsphere_bucket"}));
+        assert.commandFailed(this.coll.createIndex({"data.a.b.c": "2dsphere_bucket"}));
+    });
+
+    afterEach(function () {
         this.coll.drop();
     });
 });
